--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,7 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.android.sandwichapp.DetailActivity">
 
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="@dimen/activity_horizontal_margin">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,12 +23,6 @@
             android:contentDescription="@string/sandwich_picture_content_description"
             android:padding="@dimen/activity_horizontal_margin"
             android:scaleType="centerCrop" />
-
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -86,10 +83,8 @@
                 <TextView
                     android:id="@+id/description_tv"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="24dp"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginTop="8dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView4"
                     tools:text="desc tv" />
@@ -129,8 +124,10 @@
 
 
             </android.support.constraint.ConstraintLayout>
-        </ScrollView>
     </LinearLayout>
+
+        </ScrollView>
+
 
 
 </FrameLayout>
